--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 -->
 <section class="all-menu-scroll">                       <!-- MENU DÉROULANT -->
     <ul class="menu-scroll" onmouseover="changetext()" onmouseout="starttext()">   
-        <li class="menu-green"><a id="js-menu-change-text">Choisir ...</a>
+        <li class="menu-green"><a id="js-menu-change-text">Choisir une fiche info ...</a>
             <ul>
                 <li><a href="#">Mes Adenium</a>
                     <ul>
@@ -42,8 +42,8 @@
                     <ul>
                         <li><a href="link/aloeindex.html">Accueil</a></li>
                         <li><a href="link/aloeindex.html#humilis">Aloe humilis</a></li>
-                        <li><a href="link/aloeindex.html#marmalade">Aloe marmalade</a></li>
                         <li><a href="link/aloeindex.html#melanacantha">Aloe melanacantha</a></li>
+                        <li><a href="link/aloeindex.html#sp1">Aloe sp 1</a></li>
                         
                     </ul>
                 </li>
@@ -463,7 +463,6 @@
 
 </footer>
 <script type="text/javascript" src="assets/js/changetext.js"></script>
-<script type="text/javascript" src="assets/js/sticky.js"></script>
 <script type="text/javascript" src="assets/js/modal.js"></script>
 </body>
 </html>
