--- a/link/aloegallery.html
+++ b/link/aloegallery.html
@@ -18,8 +18,8 @@
             </div>
             <h2 class="sub-title-gallery-category">Végétaux présents ici: 
                 <a href="#humilis">Aloe humilis,</a>
-                <a href="#marmalade">Aloe marmalade,</a>
-                <a href="#melanacantha">Aloe melanacantha.</a>
+                <a href="#melanacantha">Aloe melanacantha,</a>
+                <a href="#sp1">Aloe sp 1.</a>
             </h2>        
     </header>
 <main>
@@ -34,17 +34,16 @@
         <img class="flex" src="../assets/img/aloe/gallery/aloehumilis(3).jpg" alt="aloe humilis" title="aloe humilis"/>
     </section>
             <hr>
-            <div class="species-title-gallery-category" id="marmalade">Aloe marmalade
-                <a href="aloeindex.html#marmalade">Voir la fiche info</a>
+            <div class="species-title-gallery-category" id="sp1">Aloe marmalade
+                <a href="aloeindex.html#sp1">Voir la fiche info</a>
             </div>
             <hr>
-    <section>                                                                   <!-- ALOE MARMALADE -->
-        <img class="flex" src="../assets/img/aloe/gallery/marmalade(1).jpg" alt="aloe marmalade" title="aloe marmalade"/>
-        <img class="flex" src="../assets/img/aloe/gallery/marmalade(2).jpg" alt="aloe marmalade" title="aloe marmalade"/>
-        <img class="flex" src="../assets/img/aloe/gallery/marmalade(3).jpg" alt="aloe marmalade" title="aloe marmalade"/>
-        <img class="flex" src="../assets/img/aloe/gallery/marmalade(4).jpg" alt="aloe marmalade" title="aloe marmalade"/>
-        <img class="flex" src="../assets/img/aloe/gallery/marmalade(5).jpg" alt="aloe marmalade" title="aloe marmalade"/>
-        <img class="flex" src="../assets/img/aloe/gallery/marmalade(6).jpg" alt="aloe marmalade" title="aloe marmalade"/>
+    <section>                                                                   <!-- ALOE SP 1 -->
+        <img class="flex" src="../assets/img/aloe/gallery/sp1(1).jpg" alt="aloe sp 1" title="aloe sp 1"/>
+        <img class="flex" src="../assets/img/aloe/gallery/sp1(2).jpg" alt="aloe sp 1" title="aloe sp 1"/>
+        <img class="flex" src="../assets/img/aloe/gallery/sp1(3).jpg" alt="aloe sp 1" title="aloe sp 1"/>
+        <img class="flex" src="../assets/img/aloe/gallery/sp1(4).jpg" alt="aloe sp 1" title="aloe sp 1"/>
+        <img class="flex" src="../assets/img/aloe/gallery/sp1(5).jpg" alt="aloe sp 1" title="aloe sp 1"/>
     </section>
             <hr>
             <div class="species-title-gallery-category" id="melanacantha">Aloe melanacantha
