--- a/modal.html
+++ b/modal.html
@@ -12,11 +12,21 @@
     <section id="modal-update" class="modal" aria-hidden="true" role="dialog" aria-labelledby="modal-title">     <!-- MODAL-UPDATE -->
         <div class="modal-wrapper js-modal-stop">
             <button class="js-modal-close">Fermer la boîte modale</button>
-                <p class="modal-update-title">Liste mises à jour:</p>                           
+                <p class="modal-update-title">Liste des mises à jour:</p>                           
                     Mise en ligne de mon site en date du 11/04/21.</p>
                     <hr>
                         <div class="modal-update-left">
                             <ul>
+                                <li>                                            <!-- 04/08/2021 -->
+                                    <div class="modal-date-flex">
+                                            04/08/2021:
+                                    </div>
+                                    <div class="modal-desc-flex">
+                                        <div>
+                                            &nbsp;&nbsp;_Ajout de menus déroulants dans plusieurs index fiches infos et galeries regroupant la liste des espèces présentes sur les pages contenant au-moins 5 plantes. 
+                                        </div>
+                                    </div>
+                                </li>
                                 <li>                                            <!-- 02/08/2021 -->
                                     <div class="modal-date-flex">
                                             02/08/2021:
@@ -213,7 +223,7 @@
                                         <div class="modal-desc-flex">
                                                 <div>
                                                     &nbsp;&nbsp;_Ajout <a href="link/aloeindex.html#humilis"><strong>Aloe humilis</strong></a> (Mes Aloe).<br/>
-                                                    &nbsp;&nbsp;_Ajout <a href="link/aloeindex.html#marmalade"><strong>Aloe marmalade</strong></a> (Mes Aloe).<br/>
+                                                    &nbsp;&nbsp;_Ajout <a href="link/aloeindex.html#sp1"><strong>Aloe sp 1</strong></a> (Mes Aloe).<br/>
                                                     &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#myriostigma"><strong>Astrophytum myriostigma</strong></a> (Mes Cactus).<br/>
                                                     &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#espostoa"><strong>Espostoa</strong></a> (Mes Cactus).<br/>
                                                     &nbsp;&nbsp;_Ajout <a href="link/othercactusindex.html#subdenudata"><strong>Echinopsis subdenudata</strong></a> (Mes Cactus).<br/>
@@ -278,6 +288,7 @@
                                 <li>_Ajout de plantes.</li>
                                 <li>_Ajout de photos.</li>
                                 <li>_Création pages <strong>rempotages.</strong></li>
+                                <li>_Ajout de menus déroulants dans chaque index fiches infos et galeries regroupant la liste des espèces présentes sur les pages concernées.</li>
                             </ul>               
                         </div>
         </div>
