--- a/link/aloeindex.html
+++ b/link/aloeindex.html
@@ -19,8 +19,8 @@
             </div>
                 <h2 class="sub-title-index-category">Végétaux présents ici:
                     <a href="#humilis">Aloe humilis,</a>
-                    <a href="#marmalade">Aloe marmalade,</a>
-                    <a href="#melanacantha">Aloe melanacantha.</a>
+                    <a href="#melanacantha">Aloe melanacantha,</a>
+                    <a href="#sp1">Aloe sp 1.</a>
                 </h2>
         </header>  
                 <hr><hr>
@@ -51,32 +51,32 @@
             </div>
         </section>
         <hr>
-        <section class="index-category-system-tabs">                            <!-- ALOE MARMALADE -->
-            <nav-tabs class="index-category-nav-tabs" id="marmalade">
-                <a href="#marmalade1" aria-selected="true">Nom</a>
-                <a href="#marmalade2">Exposition en été</a>
-                <a href="#marmalade3">Exposition en hiver</a>
-                <a href="#marmalade4">Arrosage en été</a>
-                <a href="#marmalade5">Arrosage en hiver</a>
-                <a href="#marmalade6">Rempotage</a>
+        <section class="index-category-system-tabs">                            <!-- ALOE SP 1 -->
+            <nav-tabs class="index-category-nav-tabs" id="sp1">
+                <a href="#sp1-1" aria-selected="true">Nom</a>
+                <a href="#sp1-2">Exposition en été</a>
+                <a href="#sp1-3">Exposition en hiver</a>
+                <a href="#sp1-4">Arrosage en été</a>
+                <a href="#sp1-5">Arrosage en hiver</a>
+                <a href="#sp1-6">Rempotage</a>
             </nav-tabs>
         
-            <div class="index-category-tab-content" id="marmalade1"><span class="species">Aloe marmalade<a href="aloegallery.html#marmalade">Voir la galerie photo</a></span>
-                <img class="flex2" src="../assets/img/aloe/index/marmalade(1).jpg" alt="Aloe marmalade" title="Aloe marmalade"/>
-                <img class="flex2" src="../assets/img/aloe/index/marmalade(2).jpg" alt="Aloe marmalade" title="Aloe marmalade"/>
-                <img class="flex2" src="../assets/img/aloe/index/marmalade(3).jpg" alt="Aloe marmalade" title="Aloe marmalade"/>
-                <img class="flex2" src="../assets/img/aloe/index/marmalade(4).jpg" alt="Aloe marmalade" title="Aloe marmalade"/>
-                <img class="flex2" src="../assets/img/aloe/index/marmalade(5).jpg" alt="Aloe marmalade" title="Aloe marmalade"/>
+            <div class="index-category-tab-content" id="sp1-1"><span class="species">Aloe sp 1<a href="aloegallery.html#sp1">Voir la galerie photo</a></span>
+                <img class="flex2" src="../assets/img/aloe/index/sp1(1).jpg" alt="Aloe sp 1" title="Aloe sp 1"/>
+                <img class="flex2" src="../assets/img/aloe/index/sp1(2).jpg" alt="Aloe sp 1" title="Aloe sp 1"/>
+                <img class="flex2" src="../assets/img/aloe/index/sp1(3).jpg" alt="Aloe sp 1" title="Aloe sp 1"/>
+                <img class="flex2" src="../assets/img/aloe/index/sp1(4).jpg" alt="Aloe sp 1" title="Aloe sp 1"/>
+                <img class="flex2" src="../assets/img/aloe/index/sp1(5).jpg" alt="Aloe sp 1" title="Aloe sp 1"/>
             </div>
-            <div class="index-category-tab-content" id="marmalade2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil. <br/> L'ensolleillement lui donne une belle teinte rouge.
+            <div class="index-category-tab-content" id="sp1-2" hidden="hidden">Je le mets dehors à partir de la deuxième quinzaine de Mai jusque courant Octobre dans une situation très lumineuse avec du soleil direct toute la journée. <br/>Seulement après avoir été acclimaté au soleil. <br/> L'ensolleillement lui donne une belle teinte rouge.
             </div>
-            <div class="index-category-tab-content" id="marmalade3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil.
+            <div class="index-category-tab-content" id="sp1-3" hidden="hidden">Je le place en intérieur dans une pièce non chauffée contre une fenêtre recevant du soleil.
             </div>
-            <div class="index-category-tab-content" id="marmalade4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
+            <div class="index-category-tab-content" id="sp1-4" hidden="hidden">Je ne l'arrose que lors de longues périodes de soleil sans pluie. <br/>En général par bassinage car, la chaleur et le soleil feront sécher la motte assez rapidement sans risque que la moisissure ne s'installe.
             </div>
-            <div class="index-category-tab-content" id="marmalade5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se creuser. 
+            <div class="index-category-tab-content" id="sp1-5" hidden="hidden">Je stoppe tous les arrosages durant plusieurs mois une fois rentré jusqu'au retour du beau temps. <br/> Je donne un peu d'eau seulement si je vois que les feuilles commence à se creuser. 
             </div>
-            <div class="index-category-tab-content" id="marmalade6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je le garde dans un pot en terre-cuite de taille moyenne. <br/>Je garnis le haut de graviers de Jura car le rendu me plaît beaucoup.
+            <div class="index-category-tab-content" id="sp1-6" hidden="hidden">Je mélange un fin terreau pour plantes d'intérieur en retirant tous les gros morceaux et je le mélange avec une bonne quantité de gravillons de quartz et de sable de rivière. <br/>Je le garde dans un pot en terre-cuite de taille moyenne. <br/>Je garnis le haut de graviers de Jura car le rendu me plaît beaucoup.
             </div>
         </section>
         <hr>
