--- a/link/cactussuspendedgallery.html
+++ b/link/cactussuspendedgallery.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../assets/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/scrollmenu.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Akaya+Telivigala" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
@@ -17,15 +18,29 @@
             <div>
 				<h1 class="title-gallery-category" id="top"> Galerie photo de mes cactus en suspension</h1>
 			</div>  
-			<h2 class="sub-title-gallery-category">Végétaux présents ici: 
-				<a href="#macranthus">Disocactus macranthus,</a>  
-				<a href="#anguliger">Epiphyllum anguliger,</a>
-				<a href="#salicornioides">Hatiora salicornioides,</a> 
-				<a href="#cruciformis">Lepismium cruciformis,</a> 
-				<a href="#ramulosa">Pseudorhipsalis ramulosa,</a> 
-				<a href="#Rhipsalis">Rhipsalis</a>, 
-				<a href="#validus">Selenicereus validus.</a>
-			</h2>      
+			<section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
+				<ul class="menu-scroll" onmouseover="changetext()" onmouseout="starttext()">   
+					<li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
+						<ul>
+							<li><a href="#">Choisir une plante ...</a>
+								<ul>
+									<li><a href="#macranthus">Disocactus macranthus</a></li>
+									<li><a href="#anguliger">Epiphyllum anguliger</a></li>
+									<li><a href="#salicornioides">Hatiora salicornioides</a></li>
+									<li><a href="#cruciformis">Lepismium cruciformis</a></li>
+									<li><a href="#ramulosa">Pseudorhipsalis ramulosa</a></li>
+									<li><a href="#Rhipsalis">Rhipsalis</a></li>
+									<li><a href="#validus">Selenicereus validus</a></li>
+								</ul>
+							</li>
+									<li><a href="#top">Haut de la page</a></li>
+									<li><a href="cactussuspendedindex.html">Voir les fiches infos</a></li>
+									<li><a href="../index.html">Retourner sur la page d'accueil</a></li>
+						</ul>
+					</li>
+				</ul>
+			</section>
+			    
     </header>
 <main>
 			<hr>
@@ -102,5 +117,6 @@
     <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
     <button class="styled-btn-index"><a href="cactussuspendedindex.html">Page des Cactus suspendus</a></button>
 </nav>
+<script type="text/javascript" src="../assets/js/sticky.js"></script>
 </body>
 </html>
