--- a/link/calatheaindex.html
+++ b/link/calatheaindex.html
@@ -5,29 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../assets/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/scrollmenu.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Akaya+Telivigala" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
     <script src="../assets/js/ariatabs.js" type="module" Defer></script>
         <title>Mes Calathea</title>
-    </head>
+</head>
     <body onload="prot()" id="calathea-background">
         <header>                                                                <!-- TITLE, SUB-TITLE ET ANCRES VERS PLANTES -->
             <div>
               <h1 class="title-index-category" id="top">MES CALATHEA</h1>
             </div>
-              <h2 class="sub-title-index-category">Végétaux présents ici: 
-                <a href="#crocata">crocata,</a> 
-                <a href="#freddie">freddie,</a> 
-                <a href="#lancifolia">lancifolia,</a> 
-                <a href="#leuconera">leuconera,</a> 
-                <a href="#makoyana">makoyana,</a>
-                <a href="#orbifolia">orbifolia,</a>
-                <a href="#ornatabeautystar">ornata beauty star,</a>
-                <a href="#roseopictadottie">roseopicta dottie,</a> 
-                <a href="#vittata">vittata.</a>
-              </h2>
+            <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
+              <ul class="menu-scroll" onmouseover="changetext()" onmouseout="starttext()">   
+                <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
+                  <ul>
+                    <li><a href="#">Choisir une plante ...</a>
+                      <ul>
+                        <li><a href="#crocata">Calathea crocata</a></li>
+                        <li><a href="#freddie">Calathea freddie</a></li>
+                        <li><a href="#lancifolia">Calathea lancifolia</a></li>
+                        <li><a href="#leuconera">Calathea leuconera</a></li>
+                        <li><a href="#makoyana">Calathea makoyana</a></li>
+                        <li><a href="#orbifolia">Calathea orbifolia</a></li>
+                        <li><a href="#ornatabeautystar">Calathea ornata beauty star</a></li>
+                        <li><a href="#roseopictadottie">Calathea roseopicta dottie</a></li>   
+                      </ul>
+                    </li>
+                        <li><a href="#top">Haut de la page</a></li>
+                        <li><a href="calatheagallery.html">Voir la galerie photos</a></li>
+                        <li><a href="../index.html">Retourner sur la page d'accueil</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </section>
         </header>
                 <hr><hr>
       <section class="index-category-system-tabs">                              <!-- CALATHEA CROCATA -->
@@ -263,10 +276,11 @@
         </div>
       </section>
         <hr>      
-      <nav class="btn-index-category">                                          <!-- BOUTONS DE NAVIGATION ET TOP -->
-          <button class="styled-btn-gallery"><a href="calatheagallery.html">Galerie photos de mes Calathea</a></button>
-          <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
-          <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
-      </nav>
+<nav class="btn-index-category">                                          <!-- BOUTONS DE NAVIGATION ET TOP -->
+  <button class="styled-btn-gallery"><a href="calatheagallery.html">Galerie photos de mes Calathea</a></button>
+  <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
+  <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
+</nav>
+<script type="text/javascript" src="../assets/js/sticky.js"></script>
     </body>
 </html>
