--- a/link/othercactusindex.html
+++ b/link/othercactusindex.html
@@ -5,34 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../assets/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/scrollmenu.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Akaya+Telivigala" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
     <script src="../assets/js/ariatabs.js" type="module" Defer></script>
         <title>Mes Cactus</title>
-    </head>
+</head>
     <body onload="prot()" id="other-cactus-background">
-        <header>                                                                <!-- TITLE, SUB-TITLE ET ANCRES VERS PLANTES -->
+    <header>                                                                    <!-- TITLE, SUB-TITLE ET ANCRES VERS PLANTES -->
             <div>
                 <h1 class="title-index-category" class= "top">MES AUTRES CACTUS</h1>
             </div>
-                <h2 class="sub-title-index-category">Végétaux présents ici: 
-                    <a href="#myriostigma">Astrophytum myriostigma,</a>  
-                    <a href="#cornifera">Coryphanta cornifera,</a>  
-                    <a href="#grusonii">Echinocactus grusonii,</a>
-                    <a href="#multicostatus">Echinofossulocactus multicostatus,</a>
-                    <a href="#subdenudata">Echinopsis subdenudata,</a>
-                    <a href="#espostoa">Espostoa,</a>
-                    <a href="#glaucescens">Ferocactus glaucescens,</a> 
-                    <a href="#stainesii">Ferocactus stainesii,</a> 
-                    <a href="#opuntia">Opuntia,</a>
-                    <a href="#monacanthamonstruosisvariegata">Opuntia monacantha monstruosis variegata,</a>
-                    <a href="#celsianus">Oreocereus celsianus,</a>
-                    <a href="#celsianus">Pilosocereus azureus,</a>
-                    <a href="#coryne">Stetsonia coryne.</a>
-                </h2>
-        </header>
+        <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
+            <ul class="menu-scroll" onmouseover="changetext()" onmouseout="starttext()">   
+                <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
+                    <ul>
+                        <li><a href="#">Choisir une plante ...</a>
+                            <ul>
+                                <li><a href="#myriostigma">Astrophytum myriostigma</a></li>
+                                <li><a href="#cornifera">Coryphanta cornifera</a></li>
+                                <li><a href="#grusonii">Echinocactus grusonii</a></li>
+                                <li><a href="#multicostatus">Echinofossulocactus multicostatus</a></li>
+                                <li><a href="#subdenudata">Echinopsis subdenudata</a></li>
+                                <li><a href="#espostoa">Espostoa</a></li>
+                                <li><a href="#glaucescens">Ferocactus glaucescens</a></li>
+                                <li><a href="#stainesii">Ferocactus stainesii</a></li>
+                                <li><a href="#opuntia">Opuntia</a></li>
+                                <li><a href="#monacanthamonstruosisvariegata">Opuntia monacantha monstruosis variegata</a></li>
+                                <li><a href="#celsianus">Oreocereus celsianus</a></li>
+                                <li><a href="#azureus">Pilosocereus azureus</a></li>
+                                <li><a href="#coryne">Stetsonia coryne</a></li>     
+                            </ul>
+                        </li>
+                            <li><a href="#top">Haut de la page</a></li>
+                            <li><a href="othercactusgallery.html">Voir la galerie photos</a></li>
+                            <li><a href="../index.html">Retourner sur la page d'accueil</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+    </header>
+<body>
                 <hr><hr>
         <section class="index-category-system-tabs">                            <!-- ASTROPHYTUM MYRIOSTIGMA -->
             <nav-tabs class="index-category-nav-tabs" id="myriostigma">
@@ -385,10 +400,11 @@
             </div>
         </section>
         <hr>   
-        <nav class="btn-index-category">                                        <!-- BOUTONS DE NAVIGATION ET TOP -->
-            <button class="styled-btn-gallery"><a href="othercactusgallery.html">Galerie photos de mes autres Cactus</a></button>
-            <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
-            <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
-        </nav>
-    </body>
+    <nav class="btn-index-category">                                            <!-- BOUTONS DE NAVIGATION ET TOP -->
+        <button class="styled-btn-gallery"><a href="othercactusgallery.html">Galerie photos de mes autres Cactus</a></button>
+        <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
+        <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
+    </nav>
+<script type="text/javascript" src="../assets/js/sticky.js"></script>
+</body>
 </html>
