--- a/link/othersucculentsindex.html
+++ b/link/othersucculentsindex.html
@@ -5,28 +5,42 @@
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../assets/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/scrollmenu.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Akaya+Telivigala" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
     <script type="text/javascript" src="../assets/js/protection.js"></script>
     <script src="../assets/js/ariatabs.js" type="module" Defer></script>
         <title>Mes Autres succulentes</title>
-    </head>
+</head>
     <body onload="prot()" id="other-succulents-background">
         <header>                                                                <!-- TITLE, SUB-TITLE ET ANCRES VERS PLANTES -->
            <div>
                 <h1 class="title-index-category" id="top">MES AUTRES SUCCULENTES</h1>
             </div>
-                <h2 class="sub-title-index-category">Végétaux présents ici: 
-                    <a href="#cooperi">Adromischus cooperi,</a>
-                    <a href="#americanavariegata">Agave americana variegata,</a>
-                    <a href="#rufescensvariegata">Anacampseros rufescens variegata,</a>
-                    <a href="#lehmannii">Corpuscularia lehmannii,</a>
-                    <a href="#echinatum">Delosperma echinatum,</a>
-                    <a href="#pulchra">Frithia pulchra,</a>
-                    <a href="#lithops">lithops,</a>
-                    <a href="#titanopsiscalcarea">Titanopsis calcarea.</a>
-                </h2>
+        <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
+                <ul class="menu-scroll" onmouseover="changetext()" onmouseout="starttext()">   
+                  <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
+                    <ul>
+                      <li><a href="#">Choisir une plante ...</a>
+                        <ul>
+                            <li><a href="#cooperi">Adromischus cooperi</a></li>
+                            <li><a href="#americanavariegata">Agave americana variegata</a></li>
+                            <li><a href="#rufescensvariegata">Anacampseros rufescens variegata</a></li>
+                            <li><a href="#lehmannii">Corpuscularia lehmannii</a></li>
+                            <li><a href="#echinatum">Delosperma echinatum</a></li>
+                            <li><a href="#pulchra">Frithia pulchra</a></li>
+                            <li><a href="#lithops">Lithops</a></li>
+                            <li><a href="#titanopsiscalcarea">Titanopsis calcarea</a></li>
+                        </ul>
+                      </li>
+                            <li><a href="#top">Haut de la page</a></li>
+                            <li><a href="othersucculentsgallery.html">Voir la galerie photos</a></li>
+                            <li><a href="../index.html">Retourner sur la page d'accueil</a></li>
+                    </ul>
+                  </li>
+                </ul>
+        </section>
         </header>
         <hr><hr>
         <section class="index-category-system-tabs">                            <!-- ADROMISCHUS COOPERI -->
@@ -250,10 +264,11 @@
             </div>
         </section>
         <hr>
-        <nav class="btn-index-category">                                        <!-- BOUTONS DE NAVIGATION ET TOP -->
-            <button class="styled-btn-gallery"><a href="othersucculentsgallery.html">Galerie photos de mes Autres succulentes</a></button>
-            <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
-            <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
-        </nav>
-    </body>
+<nav class="btn-index-category">                                        <!-- BOUTONS DE NAVIGATION ET TOP -->
+    <button class="styled-btn-gallery"><a href="othersucculentsgallery.html">Galerie photos de mes Autres succulentes</a></button>
+    <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
+    <button class="styled-btn-welcome"><a href="../index.html">Retourner sur la page d'accueil</a></button>
+</nav>
+<script type="text/javascript" src="../assets/js/sticky.js"></script>
+</body>
 </html>
