--- a/link/phalaenopsisgallery.html
+++ b/link/phalaenopsisgallery.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../assets/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="../assets/css/scrollmenu.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Akaya+Telivigala" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel='stylesheet' type='text/css'/>
     <link href="https://fonts.googleapis.com/css?family=Pangolin" rel='stylesheet' type='text/css'/>
@@ -17,27 +18,40 @@
         <div>
                 <h1 class="title-gallery-category" id="top"> Galerie photo de mes Phalaenopsis</h1>
         </div>
-                <h2 class="sub-title-gallery-category">Végétaux présents ici: 
-                        <a href="#blanchecoeurjaune">blanche coeur jaune,</a>
-                        <a href="#blanchecoeurmauve">blanche coeur mauve,</a>
-                        <a href="#column">colonne,</a>
-                        <a href="#fullersgoldenstripe">fuller's golden stripe,</a>
-                        <a href="#fullerssunset">fuller's sunset,</a>
-                        <a href="#jaune">jaune,</a>
-                        <a href="#jaunetachetee">jaune tachetée,</a>
-                        <a href="#magicart">magic art,</a>
-                        <a href="#papagayo">papagayo,</a>
-                        <a href="#petiteblanchesuspendue">petite blanche suspendue,</a>
-                        <a href="#petitemauvesuspendue">petite mauve suspendue,</a>
-                        <a href="#petiteroseclaircolonne">petite rose clair colonne,</a>
-                        <a href="#petiterosefonceecolonne">petite rose foncée colonne,</a>
-                        <a href="#purplespotted">purple spotted,</a>
-                        <a href="#rosecoeurcolore">rose coeur coloré,</a>
-                        <a href="#rosemouchetee">rose mouchetée,</a>
-                        <a href="#surfsong">surfsong,</a>
-                        <a href="#suspended">suspension,</a>
-                        <a href="#yellowcolonne">yellow colonne.</a>  
-                </h2>  
+        <section class="all-menu-scroll">                                       <!-- MENU DÉROULANT -->
+                <ul class="menu-scroll" onmouseover="changetext()" onmouseout="starttext()">   
+                  <li class="menu-green"><a id="js-menu-change-text">Végétaux présents ici ...</a>
+                    <ul>
+                      <li><a href="#">Choisir une plante ...</a>
+                        <ul>
+                                <li><a href="#blanchecoeurjaune">blanche coeur jaune</a></li>
+                                <li><a href="#blanchecoeurmauve">blanche coeur mauve</a></li>
+                                <li><a href="#column">colonne</a></li>
+                                <li><a href="#fullersgoldenstripe">fuller's golden stripe</a></li>
+                                <li><a href="#fullerssunset">fuller's sunset</a></li>
+                                <li><a href="#jaune">jaune</a></li>
+                                <li><a href="#jaunetachetee">jaune tachetée</a></li>
+                                <li><a href="#magicart">magic art</a></li>
+                                <li><a href="#papagayo">papagayo</a></li>
+                                <li><a href="#petiteblanchesuspendue">petite blanche suspendue</a></li>
+                                <li><a href="#petitemauvesuspendue">petite mauve suspendue</a></li>
+                                <li><a href="#petiteroseclaircolonne">petite rose clair colonne</a></li>
+                                <li><a href="#petiterosefonceecolonne">petite rose foncée colonne</a></li>
+                                <li><a href="#purplespotted">purple spotted</a></li>
+                                <li><a href="#rosecoeurcolore">rose coeur coloré</a></li>
+                                <li><a href="#rosemouchetee">rose mouchetée</a></li>
+                                <li><a href="#surfsong">surfsong</a></li>
+                                <li><a href="#suspended">suspension</a></li>
+                                <li><a href="#yellowcolonne">yellow colonne</a></li>
+                        </ul>
+                      </li>
+                                <li><a href="#top">Haut de la page</a></li>
+                                <li><a href="phalaenopsisindex.html">Voir les fiches infos</a></li>
+                                <li><a href="../index.html">Retourner sur la page d'accueil</a></li>
+                    </ul>
+                  </li>
+                </ul>
+        </section>
         </header>
         <hr>
                 <div class="species-title-gallery-category" id="blanchecoeurjaune">Blanche coeur jaune
@@ -253,5 +267,6 @@
     <button class="styled-btn-top"><a href="#top">Haut de la page</a></button>
     <button class="styled-btn-index"><a href="phalaenopsisindex.html">Page des Phalaenopsis</a></button>
 </nav>
+<script type="text/javascript" src="../assets/js/sticky.js"></script>
 </body>
 </html>
